# TemporalSeries

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  test_output.csv
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: bench.yml  ci.yml  release.yml
benchmark/: columnar_backend.rs  panel.rs  row_backend.rs  series.rs  time_series.rs
crates/: lib.rs
crates/errors/: mod.rs  types.rs
crates/io/: csv.rs  mod.rs
crates/panel/: core.rs  mod.rs
crates/rolling/: core.rs  mod.rs  rolling.rs
crates/series/: core.rs  mod.rs  series.rs  temporal_series.rs  time_series.rs
crates/storage/: backend.rs  columnar.rs  mod.rs  row.rs
crates/time/: mod.rs  unit.rs
docs/: katex-header.html
examples/: basic.rs  dickey_fuller_test.rs  input.csv  input_output.rs  jarque_bera_test.rs  output.csv  panel.rs  temporal_series_with_chrono.rs  temporal_series_with_columnar_backend.rs  temporal_series_with_row_backend.rs
src/: lib.rs
src/errors/: errors.rs  mod.rs
src/rolling/: rolling.rs
src/series/: mod.rs  series.rs
tests/: basic.rs  integration.rs
tests/errors/: mod.rs  test_empty_series.rs  test_invalid_window.rs  test_io_error.rs  test_length_mismatch.rs  test_parse_error.rs
tests/io/: mod.rs  test_read_csv.rs  test_write_csv.rs
tests/panel/: mod.rs  test_panel.rs  test_panel_methods.rs
tests/rolling/: mod.rs  test_mean.rs
tests/series/: mod.rs  test_all_quantiles.rs  test_autocorrelation_function.rs  test_iqr.rs  (+21 more)
(+43 files in other folders)
