[package]
name = "temporalseries"
version = "0.0.1"
edition = "2024"
description = "High-performance Rust library for quantitative time-series analysis"
license = "MIT"
repository = "https://github.com/MGijon/TemporalSeries"

[lib]
path = "crates/lib.rs"

[[bench]]
name = "series"
path = "benchmark/series.rs"
harness = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
