[package]
name = "temporalseries"
version = "0.1.0"
edition = "2024"
description = "High-performance Rust library for quantitative time-series analysis"
license = "MIT"
repository = "https://github.com/MGijon/TemporalSeries"

[lib]
path = "crates/lib.rs"

[[bench]]
name = "time_series"
path = "benchmark/time_series.rs"
harness = false

[[bench]]
name = "columnar_backend"
path = "benchmark/columnar_backend.rs"
harness = false

[[bench]]
name = "row_backend"
path = "benchmark/row_backend.rs"
harness = false

[[bench]]
name = "panel"
path = "benchmark/panel.rs"
harness = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
